# star_defender

./: README.md
game_client/: .gitignore  CMakeLists.txt  README.md
game_client/include/: Enemy.h  Game.h  Renderer.h  Utils.h
game_client/src/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Player.cpp  Player.h  Renderer.cpp  main.cpp
